--- a/Labs/Lab3/Lab3.vcxproj.filters
+++ b/Labs/Lab3/Lab3.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="lab3_2023_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
